--- a/main.html
+++ b/main.html
@@ -8,6 +8,24 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+		<h2>What is the captial of India?</h2>
+		<label for="new delhi">New Delhi</label>
+		<input id="new delhi" type="radio" name="new">
+		<label for="mumbai">Mumbai</label>
+		<input id="mumbai" type="radio" name="new">
+		<a href="https://en.wikipedia.org/wiki/New_Delhi">Wikipedia</a>
+		<blockquote		
+			style="Max-width:  600px;
+					Margin:  10px;
+					Padding: 15px;
+					Border-left: 8px solid green;
+					Background-color:#f8fffe;
+					Font-weight: Bold;"
+			>New Delhi is the capital of India and an administrative district of NCT Delhi
+		</blockquote>
+		
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
