--- a/main.html
+++ b/main.html
@@ -14,7 +14,6 @@
 		<input id="new delhi" type="radio" name="new">
 		<label for="mumbai">Mumbai</label>
 		<input id="mumbai" type="radio" name="new">
-		<a href="https://en.wikipedia.org/wiki/New_Delhi">Wikipedia</a>
 		<blockquote		
 			style="Max-width:  600px;
 					Margin:  10px;
@@ -23,7 +22,7 @@
 					Background-color:#f8fffe;
 					Font-weight: Bold;"
 			>New Delhi is the capital of India and an administrative district of NCT Delhi
-		</blockquote>
+		<a href="https://en.wikipedia.org/wiki/New_Delhi">Wikipedea</a></blockquote>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
