--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<input id="new delhi" type="radio" name="new">
 		<label for="mumbai">Mumbai</label>
 		<input id="mumbai" type="radio" name="new">
-		<blockquote	
+		<blockquote cite="https://en.wikipedia.org/wiki/New_Delhi"
 			style="Max-width:  600px;
 					Margin:  10px;
 					Padding: 15px;
